# dictionary-web

./: .gitignore  Cargo.toml  TODO.md  tailwind.config.js  wrangler.toml
.github/workflows/: deploy.yml  rust.yml
src/: app.rs  dict_context.rs  lib.rs  llm.rs
style/: tailwind.css
